--- a/principal.css
+++ b/principal.css
@@ -1,19 +1,122 @@
-.slider img{
-     display: none;
-     width: 50px;
-     height: 50px;
+body{
+    background-color: #dce5b3;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    /*Esto es para poner el fondo a la pagina web*/
 }
+
+.slider img{
+    display: block;
+    width: 800px;
+    height: 800px;
+}
+/*Esto es para dar tamaño a las imagenes dentro del sldier*/
 
 .slider img:first-child{
-    display: block;
+   display: block;
 }
+/*aqui el primer hijo del slider en este caso las imagenes en el momento que se muestren van a estar*/
+/*ocupando todo el bloque para que quede bien*/
 
-.sliderC{
-    height: 70vh;
-    width: 70vh;
+.sliderP{
+   height: 100vh;
+   width: 100vh;
 }
+/*esto da tamaño que es la altura y anchura al 100% de la altura del navegador*/
 
 .slider{
-    height: 5vh;
-    width: 5vh;
+   height: 10vh;
+   width: 10vh;
 }
+/*aqui establecemos los tamaños de la clase slider a un tamaño en especifico del navegador*/
+
+.formulario{
+    padding: 2%;
+    position: absolute;
+    top: 119%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 400px;
+    background: #87b6d4;
+    border-radius: 10px;
+}
+/*Aqui ponemos en un lugar especifico dentro de la caja del formulario*/
+
+.mariano{
+    padding: 2%;
+    position: absolute;
+    top: 25%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 400px;
+    background: #87b6d4;
+    border-radius: 10px;
+}
+
+.formulario h1{
+    text-align: center;
+    padding: 0 0 20px 0;
+}
+/*Esto es para cambiar la posicion de nuestro h1*/
+
+.registrarse{
+    padding: 5%;
+}
+/*Esto es parte del formulario de registro para dar un formato*/
+
+.mapa{
+    padding: 2%;
+    position: absolute;
+    top: 169%;
+    left: 45%;
+    transform: translate(-50%, -50%);
+    width: 400px;
+    border-radius: 10px;
+}
+/*Aqui le damos un lugar en el centro de la pantalla al mapa */
+
+.footer{
+    padding: 2%;
+    position: absolute;
+    top: 190%;
+    left: 11%;
+    transform: translate(-50%, -50%);
+    width: 400px;
+    border-radius: 10px;
+}
+/*Aqui le asignamos un lugar al footer que es el boton de subir*/
+
+<style>
+  .menu {
+    background-color: #fff;
+    border-bottom: 1px solid #ccc;
+  }
+  
+  .menu ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+  }
+  
+  .menu li {
+    margin-right: 20px;
+  }
+  
+  .menu li:last-child {
+    margin-right: 0;
+  }
+  
+  .menu a {
+    display: block;
+    padding: 10px;
+    color: #000;
+    text-decoration: none;
+    transition: background-color 0.3s ease;
+  }
+  
+  .menu a:hover {
+    background-color: #ccc;
+  }
+</style>
+/*Esta parte de <style> es para poder cambiar de color el menu de 3 opciones en la pagina web*/
