--- a/principal.css
+++ b/principal.css
@@ -33,11 +33,11 @@ body{
 .formulario{
     padding: 2%;
     position: absolute;
-    top: 119%;
+    top: 25%;
     left: 50%;
     transform: translate(-50%, -50%);
     width: 400px;
-    background: #87b6d4;
+    background: #ad7747;
     border-radius: 10px;
 }
 /*Aqui ponemos en un lugar especifico dentro de la caja del formulario*/
@@ -51,6 +51,28 @@ body{
     width: 400px;
     background: #87b6d4;
     border-radius: 10px;
+}
+
+.luis{
+  padding: 2%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 400px;
+  background: #87b6d4;
+  border-radius: 10px;
+}
+
+.anya{
+  padding: 2%;
+  position: absolute;
+  top: 75%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 400px;
+  background: #87b6d4;
+  border-radius: 10px;
 }
 
 .formulario h1{
