--- a/principal.css
+++ b/principal.css
@@ -43,37 +43,46 @@ body{
 /*Aqui ponemos en un lugar especifico dentro de la caja del formulario*/
 
 .mariano{
+  font-family: 'Franklin Gothic Medium';
+  font-size: 20px;
     padding: 2%;
     position: absolute;
-    top: 25%;
+    top: 18%;
     left: 50%;
     transform: translate(-50%, -50%);
     width: 400px;
-    background: #87b6d4;
+    background: #173786;
     border-radius: 10px;
 }
+/*Aqui modifico mi cuadro con mi informacion y la posicion de el cuadro, tipo de letra y tamaño*/
 
 .luis{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
   padding: 2%;
   position: absolute;
-  top: 50%;
+  top: 55%;
   left: 50%;
   transform: translate(-50%, -50%);
   width: 400px;
   background: #87b6d4;
   border-radius: 10px;
 }
+/*Aqui cambio mi tipo de letra favorita, el tamaño, tipografia y el cuadro de mi color favorito :)*/
 
 .anya{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
   padding: 2%;
   position: absolute;
-  top: 75%;
+  top: 98%;
   left: 50%;
   transform: translate(-50%, -50%);
   width: 400px;
-  background: #87b6d4;
+  background: #770000;
   border-radius: 10px;
 }
+/*Aqui modifico mi cuadro con mi informacion, tamaño de letra, tipografia y el cuadro de mi color favorito*/
 
 .formulario h1{
     text-align: center;
